--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "fasttext>=0.9.3",
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
+    "mediapipe>=0.10.21",
     "nltk>=3.9.2",
+    "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
 ]
